--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,9 +1,21 @@
 flask
 flask-cors
 requests
-# Note: pathway on PyPI is a stub. System uses pathway_mock.py for development.
-# For production, see PATHWAY_INSTALLATION.md
+
+# Real Pathway - Install from: https://pathway.com/developers/
+# On Windows, may need WSL or Docker
 pathway
+
+# API Framework
 fastapi
 uvicorn[standard]
 pydantic
+
+# LLM Integration (Modern SDKs)
+google-genai>=0.2.0
+openai>=1.0.0
+python-dotenv
+httpx
+
+# Optional: Local LLM via Ollama
+# ollama-python
